--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "workbench.colorCustomizations": {
         "minimap.background": "#22222250",
         "scrollbar.shadow": "#22222250"
-    }
+    },
+    "Lua.diagnostics.disable": [
+        "param-type-mismatch"
+    ]
 }
