--- a/.lh/.vscode/settings.json.json
+++ b/.lh/.vscode/settings.json.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 1,
+            "activePatchIndex": 5,
             "patches": [
                 {
                     "date": 1714203082433,
@@ -12,6 +12,22 @@
                 {
                     "date": 1714490957166,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,6 +1,9 @@\n {\r\n     \"workbench.colorCustomizations\": {\r\n         \"minimap.background\": \"#22222250\",\r\n         \"scrollbar.shadow\": \"#22222250\"\r\n-    }\r\n+    },\r\n+    \"Lua.diagnostics.disable\": [\r\n+        \"param-type-mismatch\"\r\n+    ]\r\n }\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1715189237597,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -0,0 +1,10 @@\n+{\r\n+    \"workbench.colorCustomizations\": {\r\n+        \"minimap.background\": \"#22222250\",\r\n+        \"scrollbar.shadow\": \"#22222250\"\r\n+    },\r\n+    \"Lua.diagnostics.disable\": [\r\n+        \"param-type-mismatch\"\r\n+    ],\r\n+    \"animations.Smooth-Mode\": false\r\n+}\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1715189252847,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -0,0 +1,11 @@\n+{\r\n+    \"workbench.colorCustomizations\": {\r\n+        \"minimap.background\": \"#22222250\",\r\n+        \"scrollbar.shadow\": \"#22222250\"\r\n+    },\r\n+    \"Lua.diagnostics.disable\": [\r\n+        \"param-type-mismatch\"\r\n+    ],\r\n+    \"animations.Smooth-Mode\": false,\r\n+    \"animations.Scrolling\": \"Slide\"\r\n+}\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1715189263453,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -6,25 +6,6 @@\n     \"Lua.diagnostics.disable\": [\r\n         \"param-type-mismatch\"\r\n     ],\r\n     \"animations.Smooth-Mode\": false,\r\n-    \"animations.Scrolling\": \"Slide\"\r\n-}\n-{\r\n-    \"workbench.colorCustomizations\": {\r\n-        \"minimap.background\": \"#22222250\",\r\n-        \"scrollbar.shadow\": \"#22222250\"\r\n-    },\r\n-    \"Lua.diagnostics.disable\": [\r\n-        \"param-type-mismatch\"\r\n-    ],\r\n-    \"animations.Smooth-Mode\": false\r\n-}\n-{\r\n-    \"workbench.colorCustomizations\": {\r\n-        \"minimap.background\": \"#22222250\",\r\n-        \"scrollbar.shadow\": \"#22222250\"\r\n-    },\r\n-    \"Lua.diagnostics.disable\": [\r\n-        \"param-type-mismatch\"\r\n-    ]\r\n+    \"animations.Scrolling\": \"Scale\"\r\n }\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1715189270375,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -0,0 +1,9 @@\n+{\r\n+    \"workbench.colorCustomizations\": {\r\n+        \"minimap.background\": \"#22222250\",\r\n+        \"scrollbar.shadow\": \"#22222250\"\r\n+    },\r\n+    \"Lua.diagnostics.disable\": [\r\n+        \"param-type-mismatch\"\r\n+    ]\r\n+}\n\\ No newline at end of file\n"
                 }
             ],
             "date": 1714203082433,
