Add sudo to package installation commands

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: install make
-        run: apt-get update && apt-get install make git -y
+        run: sudo apt-get update && sudo apt-get install make git -y
         
       - name: install luajit
-        run: git clone https://luajit.org/git/luajit.git && cd luajit && make && make install
+        run: git clone https://luajit.org/git/luajit.git && cd luajit && make && sudo make install
       
       - name: cleanup
         run: cd .. && rm -rf luajit
