--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,22 +1,47 @@
 name: checker
 on:
+  workflow_dispatch:
+    inputs:
+      use_githubservice:
+        description: 'Use GitHub-hosted runner'
+        required: true
+        type: boolean
+        default: false
   push:
     branches: ["main"]
   pull_request:
     branches: ["main"]
 
 jobs:
-  unified_name_check:
-    runs-on: ubuntu-22.04
+  safe-check:
+    runs-on: ${{ inputs.use_githubservice == true && 'ubuntu-slim' || 'self-hosted' }}
     steps:
+      - name: update package
+        run: sudo apt-get update
+      
       - name: install luajit
-        run: sudo apt-get update && sudo apt-get install luajit -y
+        run: sudo apt-get install luajit -y
 
       - uses: actions/checkout@v4
       
       - name: run testsuite
-        run: luajit testsuite.lua
+        run: luajit testsuite.lua nil nil nil true 0
 
       - name: run benchmark
-        run: luajit benchmark.lua
+        run: luajit benchmark.lua nil nil nil true
+  
+  loss-check:
+    runs-on: ${{ inputs.use_githubservice == true && 'ubuntu-slim' || 'self-hosted' }}
+    needs: safe-check
+    steps:
+      - name: update package
+        run: sudo apt-get update
       
+      - name: install luajit
+        run: sudo apt-get install luajit -y
+        
+      - uses: actions/checkout@v4
+
+      - name: run testsuite as check loss mode
+        run: luajit testsuite.lua nil nil nil true 1 2
+        
