--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,15 +10,15 @@ on:
   push:
     branches: ["main"]
     paths-ignore:
-      - ".doc/*"
-      - ".vscode/*"
+      - ".doc/**"
+      - ".vscode/**"
       - ".gitignore"
       - "README.md"
   pull_request:
     branches: ["main"]
     paths-ignore:
-      - ".doc/*"
-      - ".vscode/*"
+      - ".doc/**"
+      - ".vscode/**"
       - ".gitignore"
       - "README.md"
 
